force-app/main/default/objects/Trigger_Controller__mdt/Trigger_Controller__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Controller</label>
    <pluralLabel>Trigger Controllers</pluralLabel>
</CustomObject>