force-app/main/default/objects/Trigger_Controller__mdt/fields/Applies_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Type__c</fullName>
    <label>Applies To (Type)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Everyone</fullName>
                <default>true</default>
                <label>Everyone</label>
            </value>
            <value>
                <fullName>Username</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>