force-app/main/default/objects/Trigger_Controller__mdt/fields/Applies_To_Value__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Value__c</fullName>
    <inlineHelpText>If Applies To (Type) is specified, please enter a relevant username, profile, role, or permission set name for which to apply this configuration.</inlineHelpText>
    <label>Applies To (Value)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>