force-app/main/default/objects/Trigger_Controller__mdt/fields/Before_Undelete__c.field-meta.xml
<CustomField>
    <fullName>Before_Undelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Before Undelete</label>
    <type>Checkbox</type>
</CustomField>