force-app/main/default/objects/Trigger_Controller__mdt/validationRules/Applies_To_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Applies_To_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    TEXT(Applies_To_Type__c) != &apos;Everyone&apos;,
    ISBLANK(Applies_To_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Applies_To_Value__c</errorDisplayField>
    <errorMessage>When selecting configuration to apply to anything other than Everyone, please specify a relevant username, profile name, role, or permission set for the configuration to apply.</errorMessage>
</ValidationRule>