force-app/main/default/objects/Trigger_Controller__mdt/listViews/All_Trigger_Controllers.listView-meta.xml
<ListView>
    <fullName>All_Trigger_Controllers</fullName>
    <columns>MasterLabel</columns>
    <columns>Before_Insert__c</columns>
    <columns>Before_Update__c</columns>
    <columns>Before_Delete__c</columns>
    <columns>Before_Undelete__c</columns>
    <columns>After_Insert__c</columns>
    <columns>After_Update__c</columns>
    <columns>After_Delete__c</columns>
    <columns>After_Undelete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trigger Controllers</label>
    <language>en_US</language>
</ListView>